[gd_scene load_steps=8 format=3 uid="uid://kdadp51nn276"]

[ext_resource type="Script" uid="uid://8n8mji1jcbou" path="res://Turret.gd" id="2_ehgt3"]
[ext_resource type="Script" uid="uid://bh5ddd1et5xka" path="res://DetectcionArea.gd" id="2_o076b"]
[ext_resource type="PackedScene" uid="uid://cdatlfxa3071u" path="res://Scenes/bullet.tscn" id="2_owwsp"]
[ext_resource type="Texture2D" uid="uid://crl6n447v0y5e" path="res://assets/Turret_podstawowy.png" id="3_kwt8s"]
[ext_resource type="Texture2D" uid="uid://didlitgfqvins" path="res://assets/dot.png" id="5_a3vdj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ybgku"]
size = Vector2(74.375, 125.25)

[sub_resource type="CircleShape2D" id="CircleShape2D_xbnir"]
radius = 540.682

[node name="Turret" type="StaticBody2D" groups=["turrets"]]
process_mode = 1
script = ExtResource("2_ehgt3")
bullet_scene = ExtResource("2_owwsp")

[node name="TurretSprite" type="Sprite2D" parent="."]
position = Vector2(5.96046e-08, 1.13687e-13)
scale = Vector2(0.120139, 0.120139)
texture = ExtResource("3_kwt8s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4.8125, 10.375)
shape = SubResource("RectangleShape2D_ybgku")

[node name="DetectionArea" type="Area2D" parent="." node_paths=PackedStringArray("turret")]
collision_mask = 5
script = ExtResource("2_o076b")
turret = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_xbnir")

[node name="RangeIndicator" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.196078)
show_behind_parent = true
texture = ExtResource("5_a3vdj")

[connection signal="body_entered" from="DetectionArea" to="DetectionArea" method="_on_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="DetectionArea" method="_on_body_exited"]
